<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >

    <TextView
        android:layout_marginTop="10dp"
        android:text="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="#FFEB3B"
        android:textStyle="bold"
        android:background="@color/blue"
        android:fontFamily="sans-serif"
        />
    <ImageView
        android:layout_marginTop="10dp"
        android:src="@drawable/agenciasdeviaje"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="fitXY"
        android:layout_gravity="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:layout_marginLeft="20dp"
            android:text="@string/nombre"
            android:layout_width="150dp"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/nombre"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/digite"
            android:textAlignment="center"
            android:drawableStart="@drawable/ic_baseline_how_to_reg_24"
            android:inputType="textPersonName"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:layout_marginLeft="20dp"
            android:text="@string/fecha"
            android:layout_width="150dp"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/fecha"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/fecha2"
            android:textAlignment="center"
            android:drawableStart="@drawable/ic_baseline_date_range_24"
            android:inputType="textPersonName"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"

        >
        <TextView
            android:layout_marginLeft="40dp"
            android:text="@string/destino"
            android:layout_width="100dp"
            android:layout_height="wrap_content"/>
        <Spinner
            android:id="@+id/destino"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:layout_marginLeft="40dp"
            android:text="@string/nropersonas"
            android:layout_width="150dp"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/cantidadPersonas"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="1"
            android:textAlignment="center"
            android:drawableStart="@drawable/ic_baseline_numbers_24"
            android:inputType="number"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_marginLeft="40dp"
            android:text="@string/nrodias"
            android:layout_width="150dp"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/cantidadDias"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="2"
            android:textAlignment="center"
            android:drawableStart="@drawable/ic_baseline_numbers_24"
            android:inputType="number"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:layout_marginLeft="45dp"
            android:text="@string/adicionales"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="45dp"
            >
            <RadioButton
                android:id="@+id/tour"
                android:text="@string/tour"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:checked="true"
                />

            <RadioButton
                android:id="@+id/discoteca"
                android:text="@string/discoteca"
                android:layout_width="150dp"
                android:layout_height="wrap_content"/>

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        >
        <TextView
            android:layout_marginLeft="20dp"
            android:text="@string/totalPlan"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/totalPlan"
            android:layout_marginLeft="40dp"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp">

        <TextView

            android:layout_marginLeft="20dp"
            android:text="@string/descuento"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/descuento"
            android:layout_marginLeft="-8dp"
            android:layout_width="100dp"
            android:layout_height="wrap_content"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp">
        <Button
            android:id="@+id/calculate"
            android:text="@string/calcular"
            android:layout_marginLeft="20dp"
            android:layout_width="150dp"
            android:textAllCaps="false"
            android:layout_height="wrap_content"
            android:backgroundTint="#A83535"/>
        <Button
            android:id="@+id/clean"
            android:text="@string/limpiar"
            android:layout_marginLeft="20dp"
            android:layout_width="150dp"
            android:textAllCaps="false"
            android:layout_height="wrap_content"
            android:backgroundTint="#A83535"
            />



    </LinearLayout>







</LinearLayout>